# Safe-Distance-Monitoring

./: README.md  cpp_array.py  test_model.py  train_model.py  vehicle_classifier_int8.tflite
ESP32_c1/: CMakeLists.txt  camera_pins.h  idf_component.yml  main.cpp  model_data.h
ESP32_c1/test/: README.md  test_camserver.cpp  test_model.cpp  test_model_camserver.cpp
RPI_c1/: main.py  temperature_sensor.py  weastatus.py
RPI_c2/: main.py
